# llm-valet

./: .audit-dirs  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep-configs  CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  publish.yml
.tours/: architecture.tour
docs/: program-fsm.md  roadmap.md  watchdog-fsm.md
docs/testing/: v0.1-mac-mini.md  v0.2-mac-mini.md  v0.3-mac-mini.md  v0.4-mac-mini.md  v0.5-mac-mini.md  v0.5.1-mac-mini.md  v0.5.2-mac-mini.md  v0.5.3-mac-mini.md  v0.5.4-mac-mini.md  v0.5.5-mac-mini.md  v0.6.0-mac-mini.md
docs/wiki/: Architecture.md  Home.md  Module-Reference.md
install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
llm_valet/: api.py  config.py  watchdog.py
llm_valet/providers/: base.py  ollama.py
llm_valet/resources/: base.py  linux.py  macos.py  windows.py
llm_valet/static/: index.html
static/: index.html
svcmgr/: linux.py  macos.py  windows.py
tests/: conftest.py
tests/exploratory/: run_exploratory.sh
tests/integration/: conftest.py  test_api_live.py  test_ollama_provider.py  test_watchdog_live.py
tests/ui/: conftest.py  test_ctx_window.py
tests/unit/: test_api_endpoints.py  test_config.py  test_ollama_ctx_resume.py  test_ollama_force_pause.py  test_ollama_provider.py  test_ollama_validation.py  test_owasp_coverage.py  test_providers_base.py  test_resource_collectors.py  test_threshold_engine.py  test_watchdog_last_reason.py  test_watchdog_tick.py
