[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-valet"
version = "0.1.0"
description = "Cross-platform LLM lifecycle manager with resource-pressure and gaming-detection autopause"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.5"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
llm-valet = "llm_valet.api:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_valet"]
