[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-valet"
version = "0.5.6"
description = "Cross-platform LLM lifecycle manager with resource-pressure and gaming-detection autopause"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "JP Cruz", email = "jp@legionforge.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# ── GPU/NPU monitoring extras ────────────────────────────────────────────────
# Install the extra matching your hardware:
#   pip install "llm-valet[nvidia]"    — NVIDIA GPUs (Linux/Windows), via pynvml
#   pip install "llm-valet[amd]"       — AMD GPUs (Linux ROCm), via pyrsmi
#   pip install "llm-valet[intel]"     — Intel Arc GPUs (Linux/Windows), via level-zero
#   pip install "llm-valet[qualcomm]"  — Snapdragon X NPU (Windows Copilot+ PCs)
#   pip install "llm-valet[directml]"  — Any DirectX 12 GPU on Windows (fallback)
#
# Apple Silicon (M-series): Metal GPU metrics implemented via ioreg — no extra needed.
#
# TODO post-v1.0: nvidia   — pynvml already integrated in resources/windows.py + linux.py;
#                            wire optional dep and validate on real NVIDIA hardware
# TODO post-v1.0: amd      — implement ROCm path in resources/linux.py using pyrsmi
#                            https://github.com/RadeonOpenCompute/pyrsmi
# TODO post-v1.0: intel    — implement Arc path using level-zero Python bindings
#                            https://github.com/intel/level-zero
# TODO post-v1.0: qualcomm — implement Snapdragon X NPU monitoring via Windows ML / QNN SDK
#                            https://www.qualcomm.com/developer/software/qualcomm-ai-engine-direct-sdk
# TODO post-v1.0: directml — implement DirectX 12 VRAM fallback for any Windows GPU vendor
#                            via pydirectml or WMI Win32_VideoController queries
nvidia   = ["pynvml>=11.5"]
amd      = []   # stub — pyrsmi not yet integrated; see TODO post-v1.0 above
intel    = []   # stub — level-zero not yet integrated; see TODO post-v1.0 above
qualcomm = []   # stub — Snapdragon X NPU (Windows Copilot+ PCs); see TODO post-v1.0 above
directml = []   # stub — DirectX 12 GPU fallback for Windows (any vendor); see TODO post-v1.0 above
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    # static analysis
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pip-audit>=2.7",
    "semgrep>=1.70",
    # git hooks
    "pre-commit>=3.7",
    # UI / browser tests (requires: playwright install chromium)
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4", "RUF"]
ignore = [
    "S603",   # subprocess call — we use shell=False throughout; reviewed
    "S607",   # partial executable path — acceptable for system binaries (ioreg, launchctl, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is the correct pytest assertion idiom — not a security risk in tests
    "S106",   # hardcoded password/key — test fixtures always use static test values
    "S104",   # "0.0.0.0" strings in tests are test data, not interface bind calls
]

[tool.bandit]
exclude_dirs = [".venv", "venv", ".git", "tests"]
skips = [
    "B404",   # subprocess import — we use it with shell=False throughout; reviewed
    "B603",   # subprocess without shell=True — we already enforce shell=False
    "B607",   # partial path — same rationale as ruff S607
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "svcmgr.macos"
# os.getuid() exists on macOS/Linux but not Windows; this file is macOS-only.
# The type: ignore comment is valid on Windows dev machines but redundant on Linux CI.
# Suppressing unused-ignore here avoids the cross-platform false positive.
warn_unused_ignores = false

[project.scripts]
llm-valet = "llm_valet.api:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=llm_valet --cov-report=term-missing --cov-fail-under=60 --ignore=tests/ui"
testpaths = ["tests"]
markers = [
    "ui: Playwright browser tests — require 'playwright install chromium' (deselected by default)",
]

[tool.coverage.run]
source = ["llm_valet"]
omit = [
    # Platform-specific collectors — require real OS APIs to test
    "llm_valet/resources/macos.py",
    "llm_valet/resources/linux.py",
    "llm_valet/resources/windows.py",
    # Require a live Ollama instance — covered by integration tests (TODO v1.0)
    "llm_valet/providers/ollama.py",
    # FastAPI app wiring — covered by integration tests (TODO v1.0)
    "llm_valet/api.py",
    # Watchdog loop — requires async integration harness (TODO v1.0)
    "llm_valet/watchdog.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.hatch.envs.default.scripts]
lint = [
    "ruff check llm_valet svcmgr",
    "bandit -r llm_valet svcmgr -c pyproject.toml",
    "mypy llm_valet svcmgr",
    "semgrep --config=p/python --config=p/fastapi llm_valet/",
]
test = "pytest"
audit = "pip-audit"

[tool.hatch.build.targets.wheel]
packages = ["llm_valet", "svcmgr"]
